<resources>
    <string name="app_name">Week02</string>
    <string name="message">Welcome to Android!</string>
    <string name="message2">Large Text</string>
    <string name="name">Name: </string>
    <string name="password">Password: </string>
    <string name="button1">LOGIN</string>
    <string name="button2">CANCEL</string>
    <string name="rgform">Registration Form</string>
    <string name="alc">Welcome to Adventure Learning Club!</string>
    <string name="fullname">Full Name: </string>
    <string name="gender">Gender: </string>
    <string name="studentid">Student ID: </string>
    <string name="school">School: </string>
    <string name="email">E-mail: </string>
    <string name="phone">Phone: </string>
    <string name="register">Register</string>
</resources>